# CLB

./: .env.example  .gitignore  ACEL.md  CLB.md  CONTEXT_FULL_PROJECT.md  DECISIONS.md  PROJECT_OVERVIEW.md  README.md  decoded-input-data-0xad51cd15a88cf6dcdc08b675473d147c006f9f27af6258c460b6eb0d939d4af0.json  docker-compose.yml  eslint.config.js  package.json  tsconfig.base.json  tsconfig.json
.playwright-mcp/: page-2026-06-06T19-55-36-701Z.yml
contracts/: README.md  foundry.toml
docs/: api-reference.md  demo-walkthrough.md  deploy-lightsail.md  option-a-demo-setup.md  paper-artifacts.md  paper-full-outline.md  paper-outline.md  testnet-setup.md  threat-model.md
experiments/: canonical-agents.json
experiments/risk-scoring/: README.md  pyproject.toml
experiments/risk-scoring/src/clb_acel_risk_scoring/: __init__.py  __main__.py
experiments/risk-scoring/tests/: test_scoring.py
plans/: attack-lab-honesty-and-formula-clarity.plan.md  attack_simulator_ux_ab716054.plan.md  clb-acel_mode_a_foundation_96d6e101.plan.md  phase_3_attack_simulator_3bf9afe2.plan.md  phase_4_mode_b_c66e7c74.plan.md  phase_5_interactive_demo_e640d03c.plan.md  phase_5b_agent_ux_305cf8f4.plan.md  phase_7_research_contribution_hardening_3f3rdfgdf3.plan.md  phase_7a_onchain_enforcement_4e40f7d3.plan.md  phase_7b_real_identity_delivery_1553cfbe.plan.md  phase_7c_tamarin_proofs_3fd1dfbb.plan.md  phase_7d_composition_evaluation_46715d77.plan.md  phase_7e_validation_registry_loop_fdf9bc81.plan.md  phase_7f_confidential_commit_prove_95a409ec.plan.md  phase_7g_paper_consolidation_39e02dee.plan.md
(+276 files in other folders)
