[project]
name = "clb-acel-risk-scoring"
version = "0.1.0"
description = "Deterministic heuristic token-risk scoring for CLB-ACEL (mirrors @clb-acel/delivery-core)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycryptodome>=3.20",
]

[project.scripts]
risk-score = "clb_acel_risk_scoring.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clb_acel_risk_scoring"]
